--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,12 @@
 body {
     font-family: 'Roboto', sans-serif;
 }
+
+.container {
+    padding: 0 1rem;
+}
+
+.container-center {
+    max-width: 960px;
+    margin: auto;
+}
