--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+:root {
+    --primary-color: #00B0FF;
+    --secondary-color: #005E8C;
+}
 
 * {
     box-sizing: border-box;
+}
+
+a {
+    text-decoration: none;
 }
 
 body {
@@ -16,4 +24,22 @@ body {
 .container-center {
     max-width: 960px;
     margin: auto;
+}
+
+.link-primary {
+    background-color: var(--primary-color);
+    color: #fff
+}
+
+.link-secondary {
+    color: var(--secondary-color);
+    border: 2px solid var(--primary-color);;
+}
+
+
+.link {
+    padding: 0.75rem 1rem;
+    margin: 0 1rem 1rem 0;
+    display: inline-block;
+    border-radius: 0.5rem;
 }
