--- a/styles.css
+++ b/styles.css
@@ -9,14 +9,15 @@
     box-sizing: border-box;
 }
 
-a {
-    text-decoration: none;
-}
-
 body {
     font-family: 'Roboto', sans-serif;
 }
 
+hr {
+    margin: 2rem 0;
+}
+
+/* Container */
 .container {
     padding: 0 1rem;
 }
@@ -24,6 +25,11 @@ body {
 .container-center {
     max-width: 960px;
     margin: auto;
+}
+
+/* Links */
+a {
+    text-decoration: none;
 }
 
 .link-primary {
@@ -36,10 +42,21 @@ body {
     border: 2px solid var(--primary-color);;
 }
 
-
 .link {
     padding: 0.75rem 1rem;
-    margin: 0 1rem 1rem 0;
+    margin: 0 1rem 0 0;
     display: inline-block;
     border-radius: 0.5rem;
+}
+
+/* Lists */
+.list-non-bullet {
+    list-style: none;
+}
+
+.list-item-inline li {
+    display: inline;
+    border: 1px solid var(--primary-color);
+    padding: 0.5rem 0.75rem;
+    margin-right: 1rem;
 }
