--- a/styles.css
+++ b/styles.css
@@ -55,8 +55,31 @@ a {
 }
 
 .list-item-inline li {
-    display: inline;
-    border: 1px solid var(--primary-color);
+    display: inline-block;
     padding: 0.5rem 0.75rem;
     margin-right: 1rem;
+}
+
+/* Navigation Bar */
+.nav-bar {
+    background-color: var(--primary-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5rem 1.5rem;
+    color: #fff;
+    border-bottom-left-radius: 1rem ;
+}
+
+.nav-bar .brand {
+    font-weight: bold;
+    font-size: 1.1rem;
+}
+
+.nav-bar-links .link {
+    color: #fff;
+}
+
+.nav-bar-links .active {
+    background: var(--secondary-color);
 }
