--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 :root {
     --primary-color: #00B0FF;
     --secondary-color: #005E8C;
+    --dark-gray: #222;
 }
 
 * {
@@ -82,4 +83,22 @@ a {
 
 .nav-bar-links .active {
     background: var(--secondary-color);
+}
+
+/* Header */
+.hero {
+    text-align: center;
+    padding: 2rem;
+}
+
+.hero .hero-img {
+    max-width: 500px;
+    display: block;
+    margin: auto;
+}
+
+.hero .hero-head {
+    font-size: 2.5rem;
+    padding-top: 1rem;
+    color: var(--dark-gray);
 }
