--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     --primary-color: #00B0FF;
     --secondary-color: #005E8C;
     --dark-gray: #222;
+    --light-gray: #ccc;
 }
 
 * {
@@ -101,4 +102,18 @@ a {
     font-size: 2.5rem;
     padding-top: 1rem;
     color: var(--dark-gray);
+}
+
+/* Section */
+.section {
+    padding: 2rem;
+
+}
+
+.section > h1, .section > h2, .section > h3{
+    text-align: center;
+}
+
+.section.light-gray {
+    background-color: var(--light-gray);
 }
