Completed Portfolio Home

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
+
 :root {
     --primary-color: #00B0FF;
     --secondary-color: #005E8C;
     --dark-gray: #222;
-    --light-gray: #ccc;
+    --light-gray: #ece9e9;
 }
 
 * {
@@ -15,11 +17,7 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-hr {
-    margin: 2rem 0;
-}
-
-/* Container */
+/* Utilities */
 .container {
     padding: 0 1rem;
 }
@@ -29,19 +27,37 @@ hr {
     margin: auto;
 }
 
-/* Links */
-a {
-    text-decoration: none;
-}
-
 .link-primary {
     background-color: var(--primary-color);
-    color: #fff
+    color: #fff;
+    font-weight: bold;
 }
 
 .link-secondary {
     color: var(--secondary-color);
-    border: 2px solid var(--primary-color);;
+    border: 2px solid var(--primary-color);
+    font-weight: bold;
+}
+
+.link:hover {
+    transition: transform 0.3s ease-out;
+    transform: scale(1.1);
+}
+
+.primary-color {
+    color: var(--primary-color);
+}
+
+.secondary-color {
+    color: var(--secondary-color);
+}
+
+.bg-light-gray {
+    background-color: var(--light-gray);
+}
+
+.bg-white {
+    background-color: #fff;
 }
 
 .link {
@@ -51,16 +67,45 @@ a {
     border-radius: 0.5rem;
 }
 
-/* Lists */
 .list-non-bullet {
     list-style: none;
 }
 
-.list-item-inline li {
+.inline-list li {
     display: inline-block;
-    padding: 0.5rem 0.75rem;
-    margin-right: 1rem;
+    padding: 0.5rem;
+    margin: 0.5rem;
 }
+
+.section {
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    box-shadow: 5px 5px 20px 2px var(--dark-gray);
+}
+
+.section .section-head {
+    text-align: center;
+    margin: 0 0 2rem 0;
+    font-family: 'Josefin Sans', sans-serif;
+    text-transform: uppercase;
+    font-size: 1.8rem;
+}
+
+.section .section-lead {
+    font-size: 1.2rem;
+}
+
+.fa-icon {
+    margin-right:0.25rem;
+}
+
+/* Generic Styles for Tags */
+a {
+    text-decoration: none;
+}
+
 
 /* Navigation Bar */
 .nav-bar {
@@ -70,12 +115,16 @@ a {
     align-items: center;
     padding: 0.5rem 1.5rem;
     color: #fff;
-    border-bottom-left-radius: 1rem ;
+    height: 10vh;
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    position: fixed;
+    width: 100%;
 }
 
 .nav-bar .brand {
     font-weight: bold;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
 }
 
 .nav-bar-links .link {
@@ -89,50 +138,118 @@ a {
 /* Header */
 .hero {
     text-align: center;
-    padding: 2rem;
+    padding: 8rem 2rem 1rem 2rem;
+    height: 100vh;
 }
 
 .hero .hero-img {
-    max-width: 500px;
+    max-width: 550px;
     display: block;
     margin: auto;
 }
 
 .hero .hero-head {
     font-size: 2.5rem;
-    padding-top: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
     color: var(--dark-gray);
 }
 
-/* Section */
-.section {
+.hero .lead-text {
+    margin-top: 0;
+    font-size: 1.5rem;
+}
+
+/* Main */
+.main {
     padding: 2rem;
-
+    background-color: #f4f4f4;
 }
 
-.section > h1, .section > h2, .section > h3{
-    text-align: center;
+/* Section */
+.section.technologies {
+    padding-top: 4rem;
+    border-top-left-radius:1rem;
+} 
+
+.section.technologies ul li {
+    font-weight: bold;
+    color: var(--dark-gray);
+    font-size: 1.1rem;
+    transition: transform 0.3s ease-in;
+    margin-right: 1.5rem;
+    cursor: pointer;
+    padding: 0.25rem 0.5rem;
 }
 
-.section.light-gray {
-    background-color: var(--light-gray);
+.section.technologies ul li:hover {
+    transform: scale(1.2);
+}
+
+.section.technologies ul li .fa-icon {
+    color: var(--secondary-color);
+    font-size: 1.5rem;
+}
+
+.section.projects {
+    height: 50vh;
+}
+
+.section.blogs {
+    height: 50vh;
+}
+
+.section.about {
+    border-bottom-right-radius:1rem;
+}
+
+.section.about .section-head {
+    margin-bottom: 0.5rem;
+    padding: 0;
+}
+
+.section.about p {
+    margin-top: 0;
+    padding: 0;
+}
+
+.section .link-primary:visited {
+    color: #fff;
+}
+
+.section .link-secondary:visited {
+    color: var(--secondary-color);
+}
+
+.section hr {
+    background: var(--dark-gray);
+    width: 100%;
 }
 
 /* Footer */
 .footer {
     background: var(--primary-color);
     color: var(--dark-gray);
-    padding: 2rem;
+    padding: 3.5rem 2rem 1rem 2rem;
     text-align: center;
-    border-top-right-radius: 1rem;
 }
 
 .footer-head {
     font-weight: bold;
+    margin-bottom: 0;
 }
 
 .footer .social-links .link {
     color: var(--dark-gray);
+}
+
+.footer .social-links .link:visited {
+    color: var(--dark-gray);
+}
+
+.footer .social-links .link:hover {
+    color: #fff;
+    background-color: var(--dark-gray);
 }
 
 .social-links .link:hover {
