--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,12 @@
 
 * {
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 body {
+    padding: 0.25rem;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -27,6 +30,7 @@ body {
     margin: auto;
 }
 
+/* Link Utilities */
 .link-primary {
     background-color: var(--primary-color);
     color: #fff;
@@ -39,12 +43,32 @@ body {
     font-weight: bold;
 }
 
+.link {
+    padding: 0.75rem 1rem;
+    margin: 0 1rem 0 0;
+    display: inline-block;
+    border-radius: 0.5rem;
+    color: #fff;
+}
+
+.nav-link:hover {
+    background-color: var(--secondary-color);
+    opacity: 0.9;
+    font-weight: bold;
+}
+
+/* Active Link */
+.active {
+    background: var(--secondary-color);
+}
+
 .section .link:hover {
     transition: transform 0.3s ease-out;
     transform: scale(1.1);
     font-weight: bold;
 }
 
+/* Color Utilities */
 .primary-color {
     color: var(--primary-color);
 }
@@ -53,26 +77,36 @@ body {
     color: var(--secondary-color);
 }
 
+.bg-primary-color {
+    background-color: var(--primary-color);
+}
+
+.bg-secondary-color {
+    background-color: var(--secondary-color);
+    color: #fff;
+}
+
 .bg-light-gray {
     background-color: var(--light-gray);
+    color: var(--secondary-color);
 }
 
 .bg-white {
     background-color: #fff;
+    color: var(--dark-gray);
 }
 
-.link {
-    padding: 0.75rem 1rem;
-    margin: 0 1rem 0 0;
-    display: inline-block;
-    border-radius: 0.5rem;
+.bg-dark-gray {
+    background-color:var(--dark-gray);
+    color: #fff;
 }
 
-.nav-link:hover {
-    background-color: var(--secondary-color);
-    opacity: 0.9;
-    font-weight: bold;
+.bg-gray {
+    background-color: #ccc;
+    color: var(--dark-gray);
 }
+
+/* List Utilities */
 .list-non-bullet {
     list-style: none;
 }
@@ -83,8 +117,15 @@ body {
     margin: 0.5rem;
 }
 
+/* Section Utilities */
+.main-head {
+    text-align: center;
+    margin: 2rem 0 3rem 0;
+    font-family: 'Josefin Sans', sans-serif;
+}
+
 .section {
-    padding: 3rem;
+    padding: 5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -93,7 +134,7 @@ body {
 
 .section .section-head {
     text-align: center;
-    margin: 0 0 2rem 0;
+    margin-bottom: 2rem;
     font-family: 'Josefin Sans', sans-serif;
     text-transform: uppercase;
     font-size: 1.8rem;
@@ -101,8 +142,10 @@ body {
 
 .section .section-lead {
     font-size: 1.2rem;
+    margin-bottom: 0.75rem;
 }
 
+/* Icons */
 .fa-icon {
     margin-right:0.25rem;
 }
@@ -116,16 +159,19 @@ a {
 /* Navigation Bar */
 .nav-bar {
     background-color: var(--primary-color);
+    color: #fff;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0.5rem 1.5rem;
-    color: #fff;
-    height: 10vh;
-    border-bottom-left-radius: 1rem;
-    border-bottom-right-radius: 1rem;
+    
     position: fixed;
     width: 100%;
+    padding: 1rem;
+    height: 10vh;
+
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
 }
 
 .nav-bar .brand {
@@ -133,63 +179,56 @@ a {
     font-size: 1.2rem;
 }
 
-.nav-bar-links .link {
-    color: #fff;
-}
-
-.nav-bar-links .active {
-    background: var(--secondary-color);
-}
-
 /* Header */
 .hero {
-    max-width: 100%;
     text-align: center;
-    padding: 8rem 2rem 1rem 2rem;
+    padding: 5rem 2rem 1rem 2rem;
     height: 100vh;
 }
 
 .hero .hero-img {
-    max-width: 550px;
-    display: block;
+    width: 100%;
+    height: auto;
+    max-width: 600px;
     margin: auto;
+    display: block;
 }
 
 .hero .hero-head {
     font-size: 2.5rem;
-    margin-top: 1rem;
     margin-bottom: 0.5rem;
     color: var(--dark-gray);
 }
 
 .hero .lead-text {
-    margin-top: 0;
     font-size: 1.5rem;
 }
 
 /* Main */
 .main {
-    max-width: 100%;
     padding: 2rem;
     background-color: #f4f4f4;
 }
 
 /* Section */
 .section.technologies {
-    padding: 5rem;
-    border-top-left-radius:1rem;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
 } 
 
 .section.technologies .tech-stack p {
     display: inline-block;
+
     padding: 0.5rem 0.75rem;
     margin: 0.5rem;
+    border-radius: 0.5rem;
+
     color: var(--secondary-color);
+    border: 2px solid var(--dark-gray);
+    transition: transform 0.2s ease-in;
+
     font-size: 1rem;
     font-weight: bold;
-    border: 2px solid var(--dark-gray);
-    border-radius: 0.5rem;
-    transition: transform 0.2s ease-in;
 }
 
 .section.technologies .tech-stack p:hover {
@@ -197,32 +236,30 @@ a {
 }
 
 .section.technologies .tech-stack p .fa-icon {
-    color: var(--dark-gray);
+    color: var(--light-gray);
     font-size: 1.5rem;
     font-weight: bold;
 }
 
-.section.projects {
-    height: 50vh;
-}
-
-.section.blogs {
-    height: 50vh;
-}
-
 .section.about {
     padding: 4rem;
-    border-bottom-right-radius:1rem;
+    margin: 2rem auto;
 }
 
 .section.about .section-head {
-    margin-bottom: 0.5rem;
-    padding: 0;
+    margin: 1rem 0 2rem 0;
 }
 
 .section.about p {
-    margin-top: 0;
-    padding: 0;
+    padding: 0.5rem 0.75rem;
+    margin: 0 0.75rem;
+    border-radius: 0.5rem;
+    font-size: 1.2rem;
+    font-family: helvetica;
+}
+
+.section.about hr {
+    margin: 1.5rem 0;
 }
 
 .section .link-primary:visited {
@@ -240,35 +277,29 @@ a {
 
 /* Footer */
 .footer {
-    max-width: 100%;
     background: var(--primary-color);
     color: var(--dark-gray);
-    padding: 3.5rem 2rem 1rem 2rem;
+    padding: 2.5rem 2rem 1rem 2rem;
     text-align: center;
 }
 
 .footer-head {
     font-weight: bold;
-    margin-bottom: 0;
+    margin-bottom: 1rem;
 }
 
-.footer .social-links li   {
-    margin: 0.5rem;
-    padding: 0;
-}
 .footer .social-links .link {
-    color: var(--dark-gray);
     padding: 0.5rem;
-    margin: 0;
+    background: var(--dark-gray);
 }
 
-.footer .social-links .link:visited {
-    color: var(--dark-gray);
+.footer .social-links .link:visited, .footer > p {
+    color: #fff;
 }
 
 .footer .social-links .link:hover {
-    color: #fff;
-    background-color: var(--dark-gray);
+    background: #fff;
+    color: var(--dark-gray);
 }
 
 .social-links .link:hover {
