--- a/mobile.css
+++ b/mobile.css
@@ -9,6 +9,7 @@
         justify-content: center;
         position: static;
         text-align: center;
+        margin-bottom: 2rem;
         padding: 2rem 0.5rem 0rem 0.5rem;
     }
 
@@ -20,8 +21,21 @@
 
     .hero {
         height: 70vh;
-        padding: 2rem 0;
+        padding: 2rem 1rem 1rem 1rem;
     }
+
+    .hero .hero-head {
+        margin-top: 2rem;
+        font-size: 2rem;
+    }
+
+    .hero .lead-text {
+        font-size: 1.3rem;
+    }
+
+
+
+    
 
     .main {
         padding: 0.5rem;
