--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ body {
 
 .bg-white {
     background-color: #fff;
-    color: var(--dark-gray);
+    color: var(--secondary-color);
 }
 
 .bg-dark-gray {
@@ -118,6 +118,11 @@ body {
 }
 
 /* Section Utilities */
+.main {
+    padding: 2rem;
+    background-color: #f4f4f4;
+}
+
 .main-head {
     text-align: center;
     margin: 2rem 0 3rem 0;
@@ -132,7 +137,7 @@ body {
     box-shadow: 5px 5px 20px 2px var(--dark-gray);
 }
 
-.section .section-head {
+.section-head {
     text-align: center;
     margin-bottom: 2rem;
     font-family: 'Josefin Sans', sans-serif;
@@ -140,9 +145,10 @@ body {
     font-size: 1.8rem;
 }
 
-.section .section-lead {
+.section-lead {
     font-size: 1.2rem;
     margin-bottom: 0.75rem;
+    color: var(--dark-gray);
 }
 
 /* Icons */
@@ -182,7 +188,7 @@ a {
 /* Header */
 .hero {
     text-align: center;
-    padding: 5rem 2rem 1rem 2rem;
+    padding: 12vh 0 2vh 0;
     height: 100vh;
 }
 
@@ -206,21 +212,17 @@ a {
     max-width: 735px;
 }
 
-.hero .hero-head {
+.hero-head {
     font-size: 2.5rem;
     margin-bottom: 0.5rem;
     color: var(--dark-gray);
 }
 
-.hero .lead-text {
+.lead-text {
     font-size: 1.5rem;
 }
 
 /* Main */
-.main {
-    padding: 2rem;
-    background-color: #f4f4f4;
-}
 
 /* Section */
 .section.technologies {
@@ -235,27 +237,32 @@ a {
     margin: 0.5rem;
     border-radius: 0.5rem;
 
-    color: var(--secondary-color);
+    background: #fff;
+    color: var(--primary-color);
     border: 2px solid var(--dark-gray);
-    transition: transform 0.2s ease-in;
+    transition: background-color 0.2s ease-in;
 
     font-size: 1rem;
     font-weight: bold;
 }
 
 .section.technologies .tech-stack p:hover {
-    transform: scale(1.1);
+    background-color: var(--dark-gray);
 }
 
 .section.technologies .tech-stack p .fa-icon {
-    color: var(--light-gray);
+    color: var(--primary-color);
     font-size: 1.5rem;
     font-weight: bold;
 }
 
 .section.about {
     padding: 4rem;
+}
+
+.about-main .section.about {
     margin: 2rem auto;
+
 }
 
 .section.about .section-head {
