--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,15 @@ body {
     color: var(--secondary-color);
 }
 
+.white-color {
+    color: #fff;
+}
+
+.light-gray-color {
+    color: var(--light-gray);
+}
+
+
 .bg-primary-color {
     background-color: var(--primary-color);
 }
@@ -273,6 +282,8 @@ a {
     margin: 1rem 0 2rem 0;
 }
 
+
+
 .section.about p {
     padding: 0.5rem 0.75rem;
     margin: 0 0.75rem;
@@ -296,6 +307,11 @@ a {
 .section hr {
     background: var(--dark-gray);
     width: 100%;
+}
+
+/* about.html */
+.about-main.mobile-screen {
+    display: none;
 }
 
 
@@ -337,13 +353,32 @@ a {
     margin-top: 0;
 }
 .blog-list .list-item-container {
-    background: #ccc;
     border-bottom: none;
     padding: 2rem;
     border-radius: 0.5rem;
     margin: 0rem 0 2rem 0;
-    box-shadow: 5px 5px 10px  #000 ;
 } 
+
+.blog-list .list-item-container:nth-child(odd) {
+    background: #ccc;
+    box-shadow: 5px 5px 10px  #000 ;
+
+}
+
+.blog-list .list-item-container:nth-child(even) {
+    background:var(--dark-gray);
+    color: #fff;
+    box-shadow: 10px 10px 10px #000 ;
+
+}
+
+.blog-list .list-item-container:nth-child(even) .fa-icon i {
+    color: #fff;
+}
+
+.blog-list .list-item-container a.link {
+    margin: 0;
+}
 
 
 /* Footer */
