--- a/mobile.css
+++ b/mobile.css
@@ -129,6 +129,14 @@
         padding: 1rem 0;
     }
 
+    .blog-content-preview .blog-content{
+        text-align: left;
+    }
+
+    .blog-read-more {
+        text-align: center;
+    }
+
 }
 
 
