update: project tags to list

--- a/styles.css
+++ b/styles.css
@@ -335,6 +335,20 @@ a {
     padding: 0rem 3rem 3rem 3rem;
 }
 
+.project-tag {
+    background: var(--secondary-color);
+    color:var(--light-gray);
+    max-width: 100px;
+    margin: 1rem 0;
+    text-align: center;
+    padding: 0.5rem;
+    font-size: 0.85rem;
+    font-style: italic;
+    font-weight: bold;
+    font-family: 'Lato', sans-serif;
+    border-radius: 1rem;
+}
+
 .list-item-container {
     margin: 1rem auto 2rem auto;
     padding-bottom: 2rem;
